--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.1.2",
+    "apollo-server": "^2.5.0",
     "bcryptjs": "^2.4.3",
-    "graphql": "^15.5.1",
+    "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5",
-    "react-router-dom": "^5.2.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3"
+    "mongoose": "^5.13.5"
   }
 }
