--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "social-media",
+  "name": "merng",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "serve": "node index",
-    "start": "nodemon index"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,9 @@
     "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.5.11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
