--- a/package.json
+++ b/package.json
@@ -1,19 +1,47 @@
 {
-  "name": "privic",
-  "version": "1.0.0",
-  "description": "An anonymous social media application",
-  "main": "index.js",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@apollo/react-hooks": "0.1.0-beta.7",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.2",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.14",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
+    "jquery": "^3.6.0",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.29.1",
+    "query-string": "^4.3.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.0.1",
+    "react-scroll-to-bottom": "^4.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
+    "socket.io-client": "^4.1.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/satvik-tha-god/privic.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "Satvik",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/satvik-tha-god/privic/issues"
-  },
-  "homepage": "https://github.com/satvik-tha-god/privic#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
